# c_cpp_shell_script_python

./: .gitignore  README.md  a.out  interview.txt  stack  vsworkspace.code-workspace
c/: FAQ  FAQ~  a.out  fd_leak.c  ifelse.c  ifelseOperator.c  memory_allocation.c  or.c  scanf.c  squarDraw.c  switch.c  userInputCheck.c
c++/: DecToBin.cpp  DexToHex.cpp  TODO  a.out  battleship.cpp  bitmanupulation.cpp  bitpattern  call_by_refs.cpp  contents.txt  inlineFuction.cpp  interview.txt  note.txt  note.txt~  pre.cpp  readinput.cpp  rule.txt  shortNote  strings.cpp
c++/CarrotMediaPlayer/: CarrotMediaPlayer  CarrotMediaPlayer.cpp  CarrotMediaPlayer.h  cPlay  cPlay.cpp  cmd.txt
c++/STL/: .Makefile.swp  Makefile  STL_sorting.cpp  a.out  template  template.cpp  template_class  template_class.cpp  test
c++/STL/algorithm/: CMakeLists.txt
c++/STL/algorithm/libstldata/: CMakeLists.txt  STL_data.h
c++/STL/algorithm/src/: STL_sorting.cpp
c++/STL/containers/: CMakeLists.txt
c++/STL/containers/src/: pair.cpp  tuple.cpp
c++/STL/libstldata/: .Makefile.swp  CMakeLists.txt  Makefile  STL_data.cpp  libstldata.so.1.0
c++/array/: 2d.cpp  a.out  decay_array_ref_by_value.cpp
c++/bit/: BitwiseOperator.cpp  a.out  bitMacro.cpp  bitmanupulation.cpp  char_bit.cpp
c++/class/: a.out  protected.cpp
c++/constructor_desdructor/: a.out  copy_constructor.cpp  initilizer_list.cpp
c++/diff_in_c_and_cpp/: a.out  diff_result_c_cpp.c  diff_result_c_cpp_char.c  diff_result_c_cpp_struct.c  diff_result_c_cpp_struct.cpp
c++/funtions/: a.out  default_args.cpp
c++/inheritance/: a.out  (+1 more)
c++/macros/: a.out  (+1 more)
c/cmake/tuto/: CMakeLists.txt  tutorial.cxx
inter/: a.out  main.c  opti_1s.cpp  prog_without_main.c  test.c  test.s
python/: addition.py  filtered.txt  first_test_prog.py  python_basics.py  python_template.py  shinupt.py  test.txt  test.txt~
shell_script/: README.md
tools/: Learn_tools.txt
(+102 files in other folders)
